--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,10 +29,32 @@
 }
 
 
+#nav-cha {
+  width: fit-content;
+  height: fit-content;
+  left: unset;
+}
 
+/* Change values to match the radius of your form control */
+.fix-rounded-right {
+  border-top-right-radius: .2rem !important;
+  border-bottom-right-radius: .2rem !important;
+}
 
+.sud-btn{
+  justify-self: center !important;
+  background: #3EC1D5;
+  border-radius: 50px;
+  border: none;
+  color: white;
+  font-weight: bold;
+}
 
-
+.sud-btn:hover {
+  background: white;
+  color: #3EC1D5;
+  border: 1px solid #3EC1D5;
+}
 
 html, body {
   height: 100%;
@@ -1143,9 +1165,7 @@ preview-2
 }
 
 .team-img {
-  position: initial;
-  width: 100%;
-height: 150px;
+  position: relative;
 }
 
 .team-img > a {
